--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }	 	
 
 nav {
-	background-color: #fff;
+	background-color: rgba(255, 245, 245, 0.7);
 	padding: 20px;
 	width: 80px;
 	display: flex;
@@ -24,10 +24,11 @@ nav {
 	border-radius: 3px;
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
 	transition: width 0.6s linear;
+	
 }
 
 nav.active {
-	width: 350px;
+	width: 400px;
 }
 
 nav ul {
@@ -59,4 +60,41 @@ nav ul a {
 	color: #000;
 	text-decoration: none;
 	margin: 0 10px;	
+}
+
+.icon {
+	background-color: rgba(255, 245, 245, 0.0);
+	border: 0;
+	cursor: pointer;
+	padding: 0;
+	position: relative;
+	height: 30px;
+	width: 30px;
+}
+
+.icon:focus {
+	outline: 0;
+}
+
+.icon .line {
+	background-color: #079b13;
+	height: 2px;
+	width: 20px;
+	position: absolute;
+	top: 10px;
+	left: 5px;
+	transition: transform 0.6s linear;
+}
+
+.icon .line2 {
+	top: auto;
+	bottom: 10px;
+}
+
+nav.active .icon .line1 {
+	transform: rotate(-765deg) translateY(5.5px);
+}
+
+nav.active .icon .line2 {
+	transform: rotate(765deg) translateY(-5.5px);
 }
